--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <div class="container">
         <form class="main__form">
             <h1>Рєєстрація на аспірантуру</h1>
-            <input type="text" class="disign" name="userName" placeholder="Введіть ваше Ім'я">
-            <input type="text" class="disign" name="surName"  placeholder="Введіть ваше Прізвище">
-            <input type="text" class="disign" name="lastName" placeholder="Введіть по батькові">
+            <input type="text" class="disign" name="userName" placeholder="Студент 1">
+            <input type="text" class="disign" name="surName"  placeholder="Студент 2">
+            <input type="text" class="disign" name="lastName" placeholder="Студент 3">
             <!-- <input type="date" class="disign" name="userAge"> -->
-            <input type="text" class="disign" name="userLocation" placeholder="Місце проживання">
+            <input type="text" class="disign" name="userLocation" placeholder="Студент 4">
             <button type="submit" class="disign">Підтвердити</button>
         </form>
     </div>
     <div class="list_stud"></div>
+    <div class="errDiv"></div>
      <script src="/scripts/main.js"></script>
 </body>
 </html>
