--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </div>
     <div class="list_stud"></div>
     <div class="errDiv"></div>
-     <script src="/scripts/main.js"></script>
+     <script src="scripts/main.js"></script>
 </body>
 </html>
